--- a/Assets/Scripts/StateMachines/StateMachine.asmdef
+++ b/Assets/Scripts/StateMachines/StateMachine.asmdef
@@ -1,3 +1,14 @@
 {
-	"name": "StateMachine"
+    "name": "StateMachine",
+    "rootNamespace": "",
+    "references": [],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
